// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`en-US — full Diagnostic snapshots > abbreviations 1`] = `
{
  "findings": [],
  "meta": {
    "configHash": "e1a12c6b",
    "dataHash": "01dfeeaf",
    "localeId": "en-US",
    "lucidVersion": "0.1.0",
    "standardVersion": "ISO 24495-1:2023",
  },
  "metrics": {
    "cohesion": null,
    "readability": null,
    "sentences": 3,
    "syllables": null,
    "syllablesPerWord": null,
    "words": 17,
    "wordsPerSentence": 5.7,
  },
  "score": {
    "byCriterion": [
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "passive_voice",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "hidden_verb",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "reader_in_third_person",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "ambiguous_shall",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "undefined_acronym",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "prose_enumeration",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "long_sentence",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "paragraph_length",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "long_heading",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "heading_level_skip",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "single_item_list",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "organization_vocabulary",
        "densityPer100Words": 0,
      },
    ],
    "totalFindings": 0,
  },
  "text": "Mr. Smith met Rep. Jones on Jan. 5 about form No. 12. The meeting ran 30 min. Then it ended.",
}
`;

exports[`en-US — full Diagnostic snapshots > ambiguous_shall 1`] = `
{
  "findings": [
    {
      "category": "syntactic",
      "criterion": "reader_in_third_person",
      "justification": "The reader is named in the third person (“lessee”) and given an obligation or a permission (“shall”). If the document is written for this person, address them as “you”: the Federal Plain Language Guidelines (2011, p. 30) recommend it because it shows who must act (ISO 24495-1, 5.3.3). Only the author knows who the document is written for.",
      "meta": {
        "deontic": "shall",
        "readerNoun": "lessee",
      },
      "normativeReference": {
        "section": "5.3.3",
        "standard": "ISO 24495-1",
      },
      "principleGroup": "understandable",
      "requiresHuman": true,
      "severity": "info",
      "source": "iso-24495-1",
      "span": {
        "end": 16,
        "start": 0,
        "text": "The lessee shall",
      },
    },
    {
      "category": "lexical",
      "criterion": "ambiguous_shall",
      "justification": "“shall” can state an obligation, a permission, a recommendation or a prediction, and this sentence does not say which. Replace it with the word that says what you mean. The Federal Plain Language Guidelines (2011, p. 25) recommend “must” for an obligation, “may” for a permission and “should” for a recommendation; “will” for a prediction is Lucid's addition, not the guidelines'. Lucid does not pick the reading: only the author knows what the sentence means.",
      "meta": {
        "negated": false,
      },
      "principleGroup": "understandable",
      "requiresHuman": true,
      "severity": "warning",
      "source": "editorial",
      "span": {
        "end": 16,
        "start": 11,
        "text": "shall",
      },
    },
    {
      "category": "syntactic",
      "criterion": "reader_in_third_person",
      "justification": "The reader is named in the third person (“applicant”) and given an obligation or a permission (“shall”). If the document is written for this person, address them as “you”: the Federal Plain Language Guidelines (2011, p. 30) recommend it because it shows who must act (ISO 24495-1, 5.3.3). Only the author knows who the document is written for.",
      "meta": {
        "deontic": "shall",
        "readerNoun": "applicant",
      },
      "normativeReference": {
        "section": "5.3.3",
        "standard": "ISO 24495-1",
      },
      "principleGroup": "understandable",
      "requiresHuman": true,
      "severity": "info",
      "source": "iso-24495-1",
      "span": {
        "end": 57,
        "start": 38,
        "text": "The applicant shall",
      },
    },
    {
      "category": "lexical",
      "criterion": "ambiguous_shall",
      "justification": "“shall not” can state a prohibition or a prediction, and this sentence does not say which. Replace it with the words that say what you mean. The Federal Plain Language Guidelines (2011, p. 25) recommend “must not” for a prohibition; “will not” for a prediction is Lucid's addition, not the guidelines'. Lucid does not pick the reading: only the author knows what the sentence means.",
      "meta": {
        "negated": true,
      },
      "principleGroup": "understandable",
      "requiresHuman": true,
      "severity": "warning",
      "source": "editorial",
      "span": {
        "end": 61,
        "start": 52,
        "text": "shall not",
      },
    },
  ],
  "meta": {
    "configHash": "e1a12c6b",
    "dataHash": "01dfeeaf",
    "localeId": "en-US",
    "lucidVersion": "0.1.0",
    "standardVersion": "ISO 24495-1:2023",
  },
  "metrics": {
    "cohesion": null,
    "readability": null,
    "sentences": 2,
    "syllables": null,
    "syllablesPerWord": null,
    "words": 12,
    "wordsPerSentence": 6,
  },
  "score": {
    "byCriterion": [
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "passive_voice",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "hidden_verb",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 2,
          "warning": 0,
        },
        "criterion": "reader_in_third_person",
        "densityPer100Words": 16.7,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 2,
        },
        "criterion": "ambiguous_shall",
        "densityPer100Words": 16.7,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "undefined_acronym",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "prose_enumeration",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "long_sentence",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "paragraph_length",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "long_heading",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "heading_level_skip",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "single_item_list",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "organization_vocabulary",
        "densityPer100Words": 0,
      },
    ],
    "totalFindings": 4,
  },
  "text": "The lessee shall file an application. The applicant shall not remove timber.",
}
`;

exports[`en-US — full Diagnostic snapshots > empty 1`] = `
{
  "findings": [],
  "meta": {
    "configHash": "e1a12c6b",
    "dataHash": "01dfeeaf",
    "localeId": "en-US",
    "lucidVersion": "0.1.0",
    "standardVersion": "ISO 24495-1:2023",
  },
  "metrics": {
    "cohesion": null,
    "readability": null,
    "sentences": 0,
    "syllables": null,
    "syllablesPerWord": null,
    "words": 0,
    "wordsPerSentence": 0,
  },
  "score": {
    "byCriterion": [
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "passive_voice",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "hidden_verb",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "reader_in_third_person",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "ambiguous_shall",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "undefined_acronym",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "prose_enumeration",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "long_sentence",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "paragraph_length",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "long_heading",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "heading_level_skip",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "single_item_list",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "organization_vocabulary",
        "densityPer100Words": 0,
      },
    ],
    "totalFindings": 0,
  },
  "text": "",
}
`;

exports[`en-US — full Diagnostic snapshots > hidden_verb 1`] = `
{
  "findings": [
    {
      "category": "syntactic",
      "criterion": "hidden_verb",
      "justification": "Verb hidden in a noun: “make the payment of” puts the action in a noun, and the verb “pay” says it directly (ISO 24495-1, 5.3.3). The pair is attested in the Federal Plain Language Guidelines (2011), p. 23. Check that “pay” keeps the meaning in this sentence before you use it.",
      "meta": {
        "attestedIn": "Federal Plain Language Guidelines (2011), p. 23",
        "curated": true,
        "lightForm": "make",
        "lightVerb": "make",
        "nominal": "payment",
        "productive": true,
        "suffix": "ment",
        "swap": true,
        "verb": "pay",
      },
      "normativeReference": {
        "section": "5.3.3",
        "standard": "ISO 24495-1",
      },
      "principleGroup": "understandable",
      "requiresHuman": false,
      "severity": "warning",
      "source": "iso-24495-1",
      "span": {
        "end": 33,
        "start": 14,
        "text": "make the payment of",
      },
      "suggestion": "pay",
    },
    {
      "category": "syntactic",
      "criterion": "hidden_verb",
      "justification": "Verb hidden in a noun: “make an application” puts the action in a noun, and the verb “apply” says it directly (ISO 24495-1, 5.3.3). The pair is attested in the Federal Plain Language Guidelines (2011), p. 23. Check that “apply” keeps the meaning in this sentence before you use it.",
      "meta": {
        "attestedIn": "Federal Plain Language Guidelines (2011), p. 23",
        "curated": true,
        "lightForm": "make",
        "lightVerb": "make",
        "nominal": "application",
        "productive": true,
        "suffix": "tion",
        "swap": true,
        "verb": "apply",
      },
      "normativeReference": {
        "section": "5.3.3",
        "standard": "ISO 24495-1",
      },
      "principleGroup": "understandable",
      "requiresHuman": false,
      "severity": "warning",
      "source": "iso-24495-1",
      "span": {
        "end": 76,
        "start": 57,
        "text": "make an application",
      },
      "suggestion": "apply",
    },
    {
      "category": "syntactic",
      "criterion": "hidden_verb",
      "justification": "Verb possibly hidden in a noun: “made a decision” pairs the light verb “made” with a noun ending in “-sion”, a suffix that often turns a verb into a noun (ISO 24495-1, 5.3.3). Check whether a single verb says the action more directly. No verb is attested for this phrase, so Lucid does not name one.",
      "meta": {
        "curated": false,
        "lightForm": "made",
        "lightVerb": "make",
        "nominal": "decision",
        "productive": true,
        "suffix": "sion",
        "swap": false,
      },
      "normativeReference": {
        "section": "5.3.3",
        "standard": "ISO 24495-1",
      },
      "principleGroup": "understandable",
      "requiresHuman": true,
      "severity": "warning",
      "source": "iso-24495-1",
      "span": {
        "end": 107,
        "start": 92,
        "text": "made a decision",
      },
      "suggestion": undefined,
    },
  ],
  "meta": {
    "configHash": "e1a12c6b",
    "dataHash": "01dfeeaf",
    "localeId": "en-US",
    "lucidVersion": "0.1.0",
    "standardVersion": "ISO 24495-1:2023",
  },
  "metrics": {
    "cohesion": null,
    "readability": null,
    "sentences": 3,
    "syllables": null,
    "syllablesPerWord": null,
    "words": 26,
    "wordsPerSentence": 8.7,
  },
  "score": {
    "byCriterion": [
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "passive_voice",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 3,
        },
        "criterion": "hidden_verb",
        "densityPer100Words": 11.5,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "reader_in_third_person",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "ambiguous_shall",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "undefined_acronym",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "prose_enumeration",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "long_sentence",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "paragraph_length",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "long_heading",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "heading_level_skip",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "single_item_list",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "organization_vocabulary",
        "densityPer100Words": 0,
      },
    ],
    "totalFindings": 3,
  },
  "text": "If you cannot make the payment of the $100 fee, you must make an application in writing. We made a decision. Take the first position in line.",
}
`;

exports[`en-US — full Diagnostic snapshots > long_sentence 1`] = `
{
  "findings": [
    {
      "category": "syntactic",
      "criterion": "long_sentence",
      "justification": "Sentence of 34 words. Check whether it carries more than one idea; if it carries only one, it may be fine as it is. Lucid inspects sentences above 25 words. That trigger is provisional and configurable: an interim reference borrowed from GOV.UK (United Kingdom), not a US federal recommendation, and not validated for American documents. ISO 24495-1 asks for concise sentences of varied length but sets no number.",
      "meta": {
        "threshold": 25,
        "thresholdStatus": "provisional",
        "words": 34,
      },
      "normativeReference": {
        "section": "5.3.4",
        "standard": "ISO 24495-1",
      },
      "principleGroup": "understandable",
      "requiresHuman": true,
      "severity": "warning",
      "source": "iso-24495-1",
      "span": {
        "end": 179,
        "start": 0,
        "text": "You can apply if you live in the state and your household income is below the limit set by the agency for the current year, which the agency publishes each January on its website.",
      },
    },
  ],
  "meta": {
    "configHash": "e1a12c6b",
    "dataHash": "01dfeeaf",
    "localeId": "en-US",
    "lucidVersion": "0.1.0",
    "standardVersion": "ISO 24495-1:2023",
  },
  "metrics": {
    "cohesion": null,
    "readability": null,
    "sentences": 1,
    "syllables": null,
    "syllablesPerWord": null,
    "words": 34,
    "wordsPerSentence": 34,
  },
  "score": {
    "byCriterion": [
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "passive_voice",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "hidden_verb",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "reader_in_third_person",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "ambiguous_shall",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "undefined_acronym",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "prose_enumeration",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 1,
        },
        "criterion": "long_sentence",
        "densityPer100Words": 2.9,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "paragraph_length",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "long_heading",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "heading_level_skip",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "single_item_list",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "organization_vocabulary",
        "densityPer100Words": 0,
      },
    ],
    "totalFindings": 1,
  },
  "text": "You can apply if you live in the state and your household income is below the limit set by the agency for the current year, which the agency publishes each January on its website.",
}
`;

exports[`en-US — full Diagnostic snapshots > passive 1`] = `
{
  "findings": [
    {
      "category": "syntactic",
      "criterion": "passive_voice",
      "justification": "Passive voice with the agent after the verb, introduced by “by”. The sentence names who acts only after the action; opening it with that agent shows who does what (ISO 24495-1, 5.3.3). Whether to change it is the author's decision.",
      "meta": {
        "agentEnd": 45,
        "agentMarkerEnd": 32,
        "agentMarkerStart": 30,
        "agentTruncated": false,
        "form": "past",
        "hasAgent": true,
        "participleEnd": 29,
        "participleStart": 21,
      },
      "normativeReference": {
        "section": "5.3.3",
        "standard": "ISO 24495-1",
      },
      "principleGroup": "understandable",
      "requiresHuman": false,
      "severity": "warning",
      "source": "iso-24495-1",
      "span": {
        "end": 45,
        "start": 17,
        "text": "was approved by the director",
      },
    },
    {
      "category": "syntactic",
      "criterion": "passive_voice",
      "justification": "Passive voice without an agent: the sentence does not say who performs the action (ISO 24495-1, 5.3.3). If the reader needs to know who acts, name them. Lucid does not supply the missing agent: only the author knows who it is.",
      "meta": {
        "form": "modal",
        "hasAgent": false,
        "participleEnd": 81,
        "participleStart": 73,
      },
      "normativeReference": {
        "section": "5.3.3",
        "standard": "ISO 24495-1",
      },
      "principleGroup": "understandable",
      "requiresHuman": true,
      "severity": "warning",
      "source": "iso-24495-1",
      "span": {
        "end": 81,
        "start": 61,
        "text": "will not be accepted",
      },
    },
    {
      "category": "syntactic",
      "criterion": "passive_voice",
      "justification": "Passive voice without an agent: the sentence does not say who performs the action (ISO 24495-1, 5.3.3). If the reader needs to know who acts, name them. Lucid does not supply the missing agent: only the author knows who it is.",
      "meta": {
        "form": "perfect",
        "hasAgent": false,
        "participleEnd": 113,
        "participleStart": 105,
      },
      "normativeReference": {
        "section": "5.3.3",
        "standard": "ISO 24495-1",
      },
      "principleGroup": "understandable",
      "requiresHuman": true,
      "severity": "warning",
      "source": "iso-24495-1",
      "span": {
        "end": 113,
        "start": 96,
        "text": "has been extended",
      },
    },
  ],
  "meta": {
    "configHash": "e1a12c6b",
    "dataHash": "01dfeeaf",
    "localeId": "en-US",
    "lucidVersion": "0.1.0",
    "standardVersion": "ISO 24495-1:2023",
  },
  "metrics": {
    "cohesion": null,
    "readability": null,
    "sentences": 4,
    "syllables": null,
    "syllablesPerWord": null,
    "words": 26,
    "wordsPerSentence": 6.5,
  },
  "score": {
    "byCriterion": [
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 3,
        },
        "criterion": "passive_voice",
        "densityPer100Words": 11.5,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "hidden_verb",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "reader_in_third_person",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "ambiguous_shall",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "undefined_acronym",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "prose_enumeration",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "long_sentence",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "paragraph_length",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "long_heading",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "heading_level_skip",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "single_item_list",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "organization_vocabulary",
        "densityPer100Words": 0,
      },
    ],
    "totalFindings": 3,
  },
  "text": "Your application was approved by the director. Late payments will not be accepted. The deadline has been extended by March 31. She is interested in the program.",
}
`;

exports[`en-US — full Diagnostic snapshots > plain_sentence 1`] = `
{
  "findings": [],
  "meta": {
    "configHash": "e1a12c6b",
    "dataHash": "01dfeeaf",
    "localeId": "en-US",
    "lucidVersion": "0.1.0",
    "standardVersion": "ISO 24495-1:2023",
  },
  "metrics": {
    "cohesion": null,
    "readability": null,
    "sentences": 1,
    "syllables": null,
    "syllablesPerWord": null,
    "words": 7,
    "wordsPerSentence": 7,
  },
  "score": {
    "byCriterion": [
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "passive_voice",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "hidden_verb",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "reader_in_third_person",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "ambiguous_shall",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "undefined_acronym",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "prose_enumeration",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "long_sentence",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "paragraph_length",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "long_heading",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "heading_level_skip",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "single_item_list",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "organization_vocabulary",
        "densityPer100Words": 0,
      },
    ],
    "totalFindings": 0,
  },
  "text": "Send the form to us by March 31.",
}
`;

exports[`en-US — full Diagnostic snapshots > prose_enumeration 1`] = `
{
  "findings": [
    {
      "category": "structural",
      "criterion": "prose_enumeration",
      "justification": "A series of 3 items is marked with “(1)… (2)… (3)…” inside running text. If the items are requirements, steps or conditions, consider a vertical list with a lead-in sentence, as the Federal Plain Language Guidelines (2011, pp. 71-72) recommend (ISO 24495-1, 5.2.3). Whether a list helps this reader is the author's decision.",
      "meta": {
        "items": 3,
        "notation": "markers",
        "threshold": 3,
        "thresholdStatus": "provisional",
      },
      "normativeReference": {
        "section": "5.2.3",
        "standard": "ISO 24495-1",
      },
      "principleGroup": "findable",
      "requiresHuman": true,
      "severity": "warning",
      "source": "iso-24495-1",
      "span": {
        "end": 116,
        "start": 79,
        "text": "1) register, (2) pay, and (3) attend.",
      },
    },
  ],
  "meta": {
    "configHash": "e1a12c6b",
    "dataHash": "01dfeeaf",
    "localeId": "en-US",
    "lucidVersion": "0.1.0",
    "standardVersion": "ISO 24495-1:2023",
  },
  "metrics": {
    "cohesion": null,
    "readability": null,
    "sentences": 2,
    "syllables": null,
    "syllablesPerWord": null,
    "words": 18,
    "wordsPerSentence": 9,
  },
  "score": {
    "byCriterion": [
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "passive_voice",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "hidden_verb",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "reader_in_third_person",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "ambiguous_shall",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "undefined_acronym",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 1,
        },
        "criterion": "prose_enumeration",
        "densityPer100Words": 5.6,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "long_sentence",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "paragraph_length",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "long_heading",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "heading_level_skip",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "single_item_list",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "organization_vocabulary",
        "densityPer100Words": 0,
      },
    ],
    "totalFindings": 1,
  },
  "text": "Bring these documents: a photo ID, proof of address, and your lease. You must (1) register, (2) pay, and (3) attend.",
}
`;

exports[`en-US — full Diagnostic snapshots > reader_in_third_person 1`] = `
{
  "findings": [
    {
      "category": "syntactic",
      "criterion": "reader_in_third_person",
      "justification": "The reader is named in the third person (“Applicants”) and given an obligation or a permission (“must”). If the document is written for this person, address them as “you”: the Federal Plain Language Guidelines (2011, p. 30) recommend it because it shows who must act (ISO 24495-1, 5.3.3). Only the author knows who the document is written for.",
      "meta": {
        "deontic": "must",
        "readerNoun": "Applicants",
      },
      "normativeReference": {
        "section": "5.3.3",
        "standard": "ISO 24495-1",
      },
      "principleGroup": "understandable",
      "requiresHuman": true,
      "severity": "info",
      "source": "iso-24495-1",
      "span": {
        "end": 15,
        "start": 0,
        "text": "Applicants must",
      },
    },
  ],
  "meta": {
    "configHash": "e1a12c6b",
    "dataHash": "01dfeeaf",
    "localeId": "en-US",
    "lucidVersion": "0.1.0",
    "standardVersion": "ISO 24495-1:2023",
  },
  "metrics": {
    "cohesion": null,
    "readability": null,
    "sentences": 2,
    "syllables": null,
    "syllablesPerWord": null,
    "words": 16,
    "wordsPerSentence": 8,
  },
  "score": {
    "byCriterion": [
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "passive_voice",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "hidden_verb",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 1,
          "warning": 0,
        },
        "criterion": "reader_in_third_person",
        "densityPer100Words": 6.3,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "ambiguous_shall",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "undefined_acronym",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "prose_enumeration",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "long_sentence",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "paragraph_length",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "long_heading",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "heading_level_skip",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "single_item_list",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "organization_vocabulary",
        "densityPer100Words": 0,
      },
    ],
    "totalFindings": 1,
  },
  "text": "Applicants must submit Form 12 by May 1. If you are the lessee, you must monitor the operator.",
}
`;

exports[`en-US — full Diagnostic snapshots > structure 1`] = `
{
  "findings": [
    {
      "category": "structural",
      "criterion": "heading_level_skip",
      "justification": "This heading jumps from level 1 to level 4, skipping level 2. Change this heading's level or add the missing intermediate heading. Skipped levels break navigation by structure: the table of contents, scanning and screen readers.",
      "meta": {
        "level": 4,
        "prevLevel": 1,
      },
      "normativeReference": {
        "section": "5.2.4",
        "standard": "ISO 24495-1",
      },
      "principleGroup": "findable",
      "requiresHuman": true,
      "severity": "warning",
      "source": "iso-24495-1",
      "span": {
        "end": 28,
        "start": 17,
        "text": "Eligibility",
      },
    },
    {
      "category": "structural",
      "criterion": "single_item_list",
      "justification": "List with a single item. A list separates and compares several items; with only one, an item may be missing, or the content may belong in running text. Complete the list or turn the item into a sentence. This is a weak structural signal, with no direct guideline in the standard.",
      "meta": {
        "ordered": false,
      },
      "principleGroup": "findable",
      "requiresHuman": true,
      "severity": "info",
      "source": "structural-heuristic",
      "span": {
        "end": 48,
        "start": 32,
        "text": "Proof of address",
      },
    },
    {
      "category": "structural",
      "criterion": "long_heading",
      "justification": "Heading ends with a period, like a sentence. Headings are labels: remove the period, or rework the heading into a short label if it reads as a sentence.",
      "meta": {
        "reason": "sentence",
        "sentences": 1,
        "words": 3,
      },
      "normativeReference": {
        "section": "5.2.4",
        "standard": "ISO 24495-1",
      },
      "principleGroup": "findable",
      "requiresHuman": true,
      "severity": "warning",
      "source": "iso-24495-1",
      "span": {
        "end": 66,
        "start": 53,
        "text": "How to apply.",
      },
    },
  ],
  "meta": {
    "configHash": "e1a12c6b",
    "dataHash": "01dfeeaf",
    "localeId": "en-US",
    "lucidVersion": "0.1.0",
    "standardVersion": "ISO 24495-1:2023",
  },
  "metrics": {
    "cohesion": null,
    "readability": null,
    "sentences": 6,
    "syllables": null,
    "syllablesPerWord": null,
    "words": 16,
    "wordsPerSentence": 2.7,
  },
  "score": {
    "byCriterion": [
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "passive_voice",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "hidden_verb",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "reader_in_third_person",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "ambiguous_shall",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "undefined_acronym",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "prose_enumeration",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "long_sentence",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "paragraph_length",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 1,
        },
        "criterion": "long_heading",
        "densityPer100Words": 6.3,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 1,
        },
        "criterion": "heading_level_skip",
        "densityPer100Words": 6.3,
      },
      {
        "count": {
          "error": 0,
          "info": 1,
          "warning": 0,
        },
        "criterion": "single_item_list",
        "densityPer100Words": 6.3,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "organization_vocabulary",
        "densityPer100Words": 0,
      },
    ],
    "totalFindings": 3,
  },
  "text": "# Benefits

#### Eligibility

- Proof of address

## How to apply.

Send the form. We answer within ten days.",
}
`;

exports[`en-US — full Diagnostic snapshots > undefined_acronym 1`] = `
{
  "findings": [
    {
      "category": "lexical",
      "criterion": "undefined_acronym",
      "justification": "“FAA” is used before it is spelled out. Write out the full name the first time, or replace the acronym with a short name that says what it is; the Federal Plain Language Guidelines (2011, p. 34) recommend either (ISO 24495-1, 5.3.2). Lucid does not know what “FAA” stands for: the full name has to come from the author.",
      "meta": {
        "acronym": "FAA",
      },
      "normativeReference": {
        "section": "5.3.2",
        "standard": "ISO 24495-1",
      },
      "principleGroup": "understandable",
      "requiresHuman": true,
      "severity": "warning",
      "source": "iso-24495-1",
      "span": {
        "end": 7,
        "start": 4,
        "text": "FAA",
      },
    },
  ],
  "meta": {
    "configHash": "e1a12c6b",
    "dataHash": "01dfeeaf",
    "localeId": "en-US",
    "lucidVersion": "0.1.0",
    "standardVersion": "ISO 24495-1:2023",
  },
  "metrics": {
    "cohesion": null,
    "readability": null,
    "sentences": 3,
    "syllables": null,
    "syllablesPerWord": null,
    "words": 19,
    "wordsPerSentence": 6.3,
  },
  "score": {
    "byCriterion": [
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "passive_voice",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "hidden_verb",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "reader_in_third_person",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "ambiguous_shall",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 1,
        },
        "criterion": "undefined_acronym",
        "densityPer100Words": 5.3,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "prose_enumeration",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "long_sentence",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "paragraph_length",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "long_heading",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "heading_level_skip",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "single_item_list",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "organization_vocabulary",
        "densityPer100Words": 0,
      },
    ],
    "totalFindings": 1,
  },
  "text": "The FAA denied the request. The Social Security Administration (SSA) and the SSA office agree. Your ATM card works.",
}
`;
